[gd_scene load_steps=9 format=3 uid="uid://bol6ds507x7go"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_o1xea"]
[ext_resource type="PackedScene" uid="uid://ch2tqslnkyv5w" path="res://Scenes/Player/frog_animated.tscn" id="2_vuhpq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f32ck"]
size = Vector2(20, 26)

[sub_resource type="Animation" id="Animation_ol1ix"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frog:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/LifeBar:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(4),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_mtxrj"]
resource_name = "damage_taken"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frog:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 0.196146),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/LifeBar:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 2.5, 4),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eeu6k"]
_data = {
"RESET": SubResource("Animation_ol1ix"),
"damage_taken": SubResource("Animation_mtxrj")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y027g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iep7i"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.980392, 1, 0.945098, 0.65098)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_o1xea")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Frog" parent="." instance=ExtResource("2_vuhpq")]
animation = &"Idle"

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_f32ck")

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eeu6k")
}

[node name="WallJumpRaycast" type="RayCast2D" parent="."]
target_position = Vector2(12, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LifeBar" type="ProgressBar" parent="CanvasLayer"]
self_modulate = Color(1, 0, 0, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -371.0
offset_top = 8.0
offset_right = 371.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_y027g")
theme_override_styles/fill = SubResource("StyleBoxFlat_iep7i")
step = 1.0
value = 100.0
show_percentage = false
